# sqlc-gen-rust

./: .dev.env  Cargo.toml  Justfile  LICENSE  LICENSE-MIT  README.md  build.rs  compose.yaml  plan.md  rust-toolchain.toml  sqlc.json  sqlc.yaml
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: create_release.yaml  dependabot_automerge.yaml  pull_request.yaml
examples/authors/: Cargo.toml  queries.sql
examples/authors/deadpool-postgres/: Cargo.toml
examples/authors/deadpool-postgres/src/: lib.rs  queries.rs
examples/authors/mysql/: Cargo.toml  schema.sql
examples/authors/mysql/src/: lib.rs
examples/authors/postgres/: Cargo.toml
examples/authors/postgres/src/: lib.rs  queries.rs
examples/authors/rusqlite/: Cargo.toml
examples/authors/rusqlite/src/: lib.rs  queries.rs
examples/authors/sqlite/: Cargo.toml
examples/authors/sqlite/src/: queries.rs
examples/authors/sqlx-mysql/: Cargo.toml  queries.sql
examples/authors/sqlx-mysql/src/: queries.rs
examples/authors/sqlx-postgres/: Cargo.toml
examples/authors/sqlx-postgres/src/: lib.rs  queries.rs
examples/authors/sqlx-sqlite/: Cargo.toml
examples/authors/sqlx-sqlite/src/: lib.rs  queries.rs
examples/authors/src/: lib.rs  queries.rs
examples/authors/tokio-postgres/: Cargo.toml
examples/authors/tokio-postgres/src/: queries.rs
examples/booktest/: Cargo.toml
examples/booktest/src/: lib.rs  queries.rs
examples/copyfrom/: Cargo.toml  queries.sql
examples/copyfrom/src/: deadpool_query.rs  lib.rs  postgres_query.rs  sqlx_query.rs  tokio_query.rs
examples/e-commerce/: Cargo.toml  queries.sql
examples/e-commerce/migrations/: 20250701131840_init-e-commerce.sql
examples/e-commerce/src/: deadpool_query.rs  debug.txt  lib.rs  main.rs  postgres_query.rs  queries.rs  sqlx_query.rs  tokio_query.rs
examples/jets/: Cargo.toml
examples/jets/src/: lib.rs  queries.rs
examples/ondeck/: Cargo.toml
examples/ondeck/src/: lib.rs  queries.rs
examples/slice/: Cargo.toml  mysql-queries.sql
examples/slice/src/: lib.rs  mysql_query.rs
examples/sqlc-slice/rusqlite/: Cargo.toml
examples/sqlc-slice/rusqlite/src/: lib.rs  queries.rs
examples/sqlc-slice/sqlx-mysql/: Cargo.toml  queries.sql  schema.sql
examples/sqlc-slice/sqlx-mysql/src/: lib.rs  queries.rs
examples/sqlc-slice/sqlx-postgres/: Cargo.toml  queries.sql
examples/sqlc-slice/sqlx-postgres/src/: lib.rs  queries.rs
examples/sqlc-slice/sqlx-sqlite/: Cargo.toml  queries.sql  schema.sql
examples/sqlc-slice/sqlx-sqlite/src/: lib.rs  queries.rs
examples/test-utils/: Cargo.toml
examples/test-utils/src/: lib.rs  main.rs
examples/type-mapping/sqlx-mysql/: Cargo.toml  queries.sql  schema.sql
examples/type-mapping/sqlx-mysql/src/: lib.rs  queries.rs
examples/type-mapping/sqlx-postgres/: Cargo.toml  queries.sql  schema.sql
examples/type-mapping/sqlx-postgres/src/: lib.rs  queries.rs
examples/type-mapping/sqlx-sqlite/: Cargo.toml  queries.sql  schema.sql
examples/type-mapping/sqlx-sqlite/src/: lib.rs  queries.rs
examples/type-mapping/tokio-postgres/: Cargo.toml  queries.sql  schema.sql
examples/type-mapping/tokio-postgres/src/: lib.rs  queries.rs
src/: lib.rs  main.rs  path_map.rs  postgres.rs  query.rs  sqlx.rs
src/db_crates/: mod.rs  postgres.rs  rusqlite.rs  sqlx.rs
