[package]
name = "sqlc-gen-rust"
version = "0.1.9"
edition = "2024"
authors = ["tunamaguro"]
license = "MIT OR Apache-2.0"

[workspace]
members = [
    "examples/authors/*",
    "examples/booktest",
    "examples/copyfrom",
    "examples/e-commerce",
    "examples/jets",
    "examples/ondeck",
    "examples/type-mapping/*",
    "examples/test-utils",
]

[profile.release]
lto = true

[dependencies]
prost = { version = "0.14" }

prettyplease = { version = "0.2" }
proc-macro2 = { version = "1.0" }
quote = { version = "1.0" }
syn = { version = "2" }

convert_case = { version = "0.8.0" }
regex-lite = "0.1.6"

serde = { version = "1.0.219", features = ["derive"] }
serde_json = { workspace = true }

[build-dependencies]
prost-build = "0.14"

[workspace.dependencies]
postgres = { version = "0.19" }
tokio-postgres = { version = "0.7.13" }
deadpool-postgres = { version = "0.14" }
postgres-types = { version = "0.2.9", features = [
    "derive",
    "array-impls",
    "with-uuid-1",
    "with-serde_json-1",
    "with-chrono-0_4"
] }
sqlx = { version = "0.8", features = [
    "postgres",
    "mysql",
    "sqlite",
    "runtime-tokio",
    "uuid",
    "chrono",
    "ipnet"
] }

tokio = { version = "1.47.1", features = ["full"] }

chrono = { version = "0.4.41" }
uuid = { version = "1.18" }
serde_json = { version = "1.0" }

test-context = "0.4.1"
test-utils = { path = "./examples/test-utils" }
