[package]
name = "e-commerce"
version = "0.1.0"
edition = "2024"

[dependencies]
postgres-types = { workspace = true }
postgres = { workspace = true }
deadpool-postgres = { workspace = true }
tokio-postgres = { workspace = true }
sqlx = { workspace = true }

chrono = { workspace = true }
uuid = { workspace = true }
serde_json = { workspace = true }
futures = "0.3.31"
[dev-dependencies]
tokio = { workspace = true }
test-context = { workspace = true }
test-utils = { workspace = true }
