[package]
name = "authors-sqlx-sqlite"
version = "0.1.0"
edition = "2024"

[dependencies]
postgres-types = { workspace = true }
postgres = { workspace = true }
deadpool-postgres = { workspace = true }
tokio-postgres = { workspace = true }
sqlx = { workspace = true}

uuid = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
test-context = { workspace = true }
test-utils = { workspace = true }
