[package]
name = "type-mapping-sqlx-sqlite"
version = "0.1.0"
edition = "2024"

[dependencies]
sqlx = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
test-context = { workspace = true }
test-utils = { workspace = true }
